# DroidTurbo

./: .gitignore  README.md  build.gradle  get_ready.sh  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/docs/: Ref.md
app/docs/ui/: Arch.md  Widget.md
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt  jni_helper.h  jni_main.cpp  jni_utils.cpp  jni_utils.h
app/src/main/cpp/base/: global.hpp  log.hpp  time.hpp  time_cost.hpp
app/src/main/cpp/device/: Android.mk  Makefile  config.mk  gpu.cpp  gpu.h  gpu_grayscale.cu  gpu_grayscale.h  helper_cuda.h
app/src/main/cpp/device/common/: gpu_helper.h  time_cost.h
app/src/main/cpp/ocv/: Android.mk  CMakeLists.txt  jni_main.cpp  ocv_grayscale.cpp  ocv_grayscale.h  ocv_orb.cpp  ocv_orb.h  orb.h
app/src/main/cpp/util/: Android.mk  CMakeLists.txt  jni_main.cpp  jni_utils.cpp  jni_utils.h
app/src/main/res/anim/: slide_in_bottom.xml  slide_in_left.xml  slide_in_right.xml  slide_out_bottom.xml  slide_out_left.xml  slide_out_right.xml  slide_stay.xml
app/src/main/res/color/: bar_icon_color.xml  tab_icon_color.xml
app/src/main/res/drawable/: ic_apps.xml  ic_check.xml  ic_close.xml  ic_menu.xml  ic_pets.xml  ic_refresh.xml  ic_search.xml  ic_toys.xml  ic_widgets.xml  shadow_left.xml
app/src/main/res/layout/: activity_all_apps.xml  activity_bottom_sheet.xml  activity_camera2_basic.xml  activity_camera2_image.xml  activity_grayscale.xml  activity_hello_cube.xml  activity_hello_gl2.xml  activity_main.xml  activity_ocv_orb.xml  activity_rx_apps.xml  activity_san_angeles.xml  activity_snake_surface_view.xml  activity_terminal.xml  activity_transparent_status_bar.xml  app_bar_main.xml  bottom_sheet.xml  content_main.xml  fragment_color_page.xml  fragment_custom.xml  fragment_list.xml  fragment_support.xml  fragment_tab.xml  fragment_test.xml  item_app.xml  item_app_cell.xml  item_card.xml  nav_header_main.xml  tab_custom.xml  tab_custom_bar.xml  toolbar.xml  toolbar_scroll.xml  toolbar_tab.xml
app/src/main/res/menu/: all_apps.xml  main.xml  nav_menu_main.xml  ocv_orb.xml  transparent_status_bar.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  drawables.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/rs/: yuv420888.rs
images/: info
libarch/: README.md  build.gradle  proguard-rules.pro
libarch/src/main/: AndroidManifest.xml
libgldraw/: CMakeLists.txt  README.md  build.gradle  proguard-rules.pro
libgldraw/src/androidTest/java/cc/eevee/turbo/libgldraw/: ExampleInstrumentedTest.java
libgldraw/src/main/: AndroidManifest.xml
libgldraw/src/main/cpp/hellocube/: gl_cube.cpp
libgldraw/src/main/cpp/hellogl2/: gl_code.cpp
libgldraw/src/main/cpp/sanangeles/: app-android.c  demo.c
libgldraw/src/main/java/cc/eevee/turbo/libgldraw/: HelloCubeRenderer.java  HelloCubeView.java  HelloGL2Lib.java  HelloGL2View.java  SanAngelesGLSurfaceView.java  SanAngelesRenderer.java
libgldraw/src/test/java/cc/eevee/turbo/libgldraw/: ExampleUnitTest.java
libopencv/: README.md  build.gradle  proguard-rules.pro
libopencv/src/main/: AndroidManifest.xml
libopencv/src/main/cpp/: Android.mk  Application.mk  CMakeLists.txt
libopencv/src/main/cpp/facedetect/: Android.mk  CMakeLists.txt  DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
libopencv/src/main/cpp/tutorial2/: Android.mk  CMakeLists.txt  jni_part.cpp
libopencv/src/main/res/layout/: camera_calibration_surface_view.xml  face_detect_surface_view.xml  tutorial1_surface_view.xml  tutorial2_surface_view.xml  tutorial3_surface_view.xml
libopencv/src/main/res/menu/: calibration.xml
libsanangeles/: CMakeLists.txt  README.md  build.gradle
libsanangeles/src/androidTest/java/cc/eevee/turbo/libsanangeles/: ExampleInstrumentedTest.java
libsanangeles/src/main/: AndroidManifest.xml
libsanangeles/src/main/cpp/: app-android.c
libsanangeles/src/main/java/cc/eevee/turbo/libsanangeles/: SanAngelesGLSurfaceView.java  SanAngelesRenderer.java
libsanangeles/src/test/java/cc/eevee/turbo/libsanangeles/: ExampleUnitTest.java
openCVLibrary320/: build.gradle
(+284 files in other folders)
